[package]
name = "retreau"
version = "0.1.0"
edition = "2021"
authors = ["Beau Gieskens <beau.gieskens@gmail.com>"]

[profile.release]
opt-level = "s"   # optimize for size in release builds
lto = true
strip = true
codegen-units = 1

[lib]
crate-type = ["lib", "cdylib"]

[dependencies.axum]
version = "0.8"
default-features = false
optional = true

[dependencies.console_error_panic_hook]
version = "0.1"

[dependencies.getrandom]
version = "0.3"
features = ["wasm_js"]

[dependencies.leptos]
version = "0.8"

[dependencies.leptos_axum]
version = "0.8"
default-features = false
features = ["wasm"]
optional = true

[dependencies.leptos_meta]
version = "0.8"

[dependencies.leptos_router]
version = "0.8"

[dependencies.stylance]
version = "0.7"

[dependencies.tower-service]
version = "0.3"

[dependencies.wasm-bindgen]
version = "0.2"

[dependencies.worker]
version = "0.6"
features = ["http", "axum", "d1"]
optional = true

[features]
hydrate = ["leptos/hydrate"]
leptos-watch = ["hydrate"]
ssr = [
  "dep:axum",
  "dep:leptos_axum",
  "dep:worker",
  "leptos/ssr",
  "leptos_router/ssr",
]

[package.metadata.leptos]
wasm-validation = false
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "retreau"

# The site root folder is where cargo-leptos generate all output.
# WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by
# dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to
# <site-root>/<site-pkg>/app.css
style-file = "style/bundled.scss"

# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "assets"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content.
# Use it in your server setup.
site-addr = "127.0.0.1:8787"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "cargo make test-ui"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# Set by cargo-leptos watch when building with that tool.
# Controls whether autoreload JS will be included in the head.
watch = false

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["hydrate", "leptos-watch"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# Enabling wasm-opt features
#
# Optional. By default, "-Oz", "--enable-bulk-memory" and "--enable-nontrapping-float-to-int"
# are used. For all features, consult `wasm-opt --help`.
# By providing features, you will override the default enabled features.
wasm-opt-features = [
  "-Oz",
  "--enable-bulk-memory",
  "--enable-nontrapping-float-to-int",
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
